versioned_docs/version-2026.1.11/sala/bloco_2/sala_8-2.mdx
---
slug: /sala/sala_8-2
sidebar_label: Sala 8-2
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Sala 8-2",
  "base": "Bloco 2",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Matemática I - 462",
          "size": 2,
          "teachers": [
            "Elenice Josefa Kolancko Setti"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira - Inglês - 456",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Geografia I - 463",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Sociologia I - 465",
          "size": 2,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Física I - 460",
          "size": 2,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Bioestatística - 487",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Zootecnia Geral - 467",
          "size": 2,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química I - 461",
          "size": 2,
          "teachers": [
            "Marcela Marta Lazaretti Tormena"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Biologia I - 459",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Parasitologia, higiene e saúde - 886",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura I - 2515",
          "size": 3,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Filosofia I - 464",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Metodologia da pesquisa - 73",
          "size": 2,
          "teachers": [
            "Paula Fabiane de Souza"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Diversidade e educação inclusiva - 657",
          "size": 2,
          "teachers": [
            "Paula Fabiane de Souza"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Desenho Técnico e Topografia - 469",
          "size": 4,
          "teachers": [
            "Octavio Henrique Viana"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira - Inglês - 456",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Trabalho de conclusão de curso II - 1420",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Sociologia da educação - 1303",
          "size": 2,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:50 - 20:40",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Agroecologia e Desenvolvimento Rural Sustentável - 2468",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Educação Postural e Segurança no Trabalho - 471",
          "size": 1,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Agricultura Geral - 466",
          "size": 2,
          "teachers": [
            "Elias Franco"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Estágio curricular supervisionado em biologia I - 496",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Estágio curricular supervisionado em biologia II - 1421",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "17:35 - 19:00",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Sala 8-2

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
